# australVM

./: COMPLETE_PHASE_5_SUMMARY.md  CPS_JIT_INTEGRATION.md  CPS_JIT_STATUS.md  DELIVERABLES.md  EXECUTIVE_SUMMARY.md  FAST_TRACK.md  FINAL_STATUS.md  FINAL_SUMMARY.txt  HANDOFF_COMPLETE.md  IMPLEMENTATIONORDER.md  INTEGRATION_APPLIED.md  INTEGRATION_DIFF.md  INTEGRATION_TEST.RESULT.txt  INTEGRATION_WALKTHROUGH.md  PHASE_10_PLAN.md  PHASE_11_PLAN.md  PHASE_5_COMPLETE.txt  PHASE_5_COMPLETE_PACKAGE.txt  PHASE_5_DELIVERABLE.txt  PHASE_5_FINAL.md  PHASE_5_SUMMARY.txt  PHASE_6_EXECUTIVE_SUMMARY.txt  PHASE_6_INTEGRATION_GUIDE.md  PHASE_6_PLAN.md  PHASE_6_STATUS.md  PHASE_7_COMPLETE.md  PHASE_7_PLAN.md  PHASE_8_PLAN.md  PHASE_9_PLAN.md  PROJECT_COMPLETE.txt  PULL_REQUEST.md  README.md  README_CPS_JIT.md  README_PHASE5.md  STAGE_8_START_HERE.md  WHAT_WE_DID_SO_FAR.txt  capabilities.aui  capabilities.aum  gen_correct_dune.sh  policies.cedar  (+7 more)
examples/fib/: main
lib/: CRenderer.ml  CRepr.ml  CamlCompiler.ml  CamlCompiler_rust_bridge.ml  CamlCompiler_stubs.c  CellAttribute.ml  CliEngine.ml  CliParser.ml  CliParser.mli  Compiler.ml  Compiler.mli  Compiler_cps.ml  CpsGen.ml  TailCallAnalysis.ml  TailCallUtil.ml  dune  patch_0x02.ml  rust_bridge.c  verify_cps_conversion.sh
safestos/: .gitignore  AGENTS.md  COMPLETION_SUMMARY.md  CRANELIFT_COMPILATION_PROOF.md  CURRENT_STATUS.md  DEMO_CPS_PIPELINE.sh  FINAL_STATE_2026-04-26.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_READY.md  Makefile  PHASE_5_CPSGEN_COMPLETE.md  README.md  SESSION_SUMMARY.md  STATUS.md
safestos/cells/: nano_core.aum
safestos/compiler/: compile_cell.c
safestos/cranelift/: BLOCK_4_COMPLETE.md  BRIDGE_ARCH.md  BUILD_SUCCESS.md  Cargo.toml  Makefile  QUICKSTART.sh  README.md  SESSION_4_COMPLETE.md  build.rs  check_api.rs  mock_scheduler.c  run_test  run_test.c  test_bridge.c  test_cps.c  test_use.rs  verify_api  verify_api.c  wrap_test  wrap_test.c
safestos/cranelift/find_callconv/: mod.rs
safestos/cranelift/src/: cps.rs  cps.rs.backup  cps.rs.backup3  cps.rs.bak  cps.rs.overwrite  cps.rs.testing  lib.rs  policy.rs
safestos/include/: vm.h
safestos/lib/: INTEGRATION_DEMO.md  integration_proof  integration_proof.c
safestos/runtime/: capabilities.c  cell_loader.c  region.c  scheduler.c  serialize.c  typed_eval.c
safestos/test/: integration_complete.c  integration_demo  integration_demo.c  test_tailcall.aum  vm_test  vm_test.c
test/: CliParserTest.ml
test_programs/: advanced_cell.aui  advanced_cell.aum  managed_cell.aui  managed_cell.aum  managed_cell_main.aui  managed_cell_main.aum
