(ocamllex Lexer)

; Core Austral compiler
(library
  (name austral_core)
  (public_name austral.austral_core)
  (synopsis "The bootstrapping compiler for Austral.")
  (libraries unix str sexplib zarith yojson)
  (preprocess (pps ppx_deriving.eq ppx_deriving.show ppx_sexp_conv))
  (flags :standard -w -39)
  (modules
    AbstractionPass BodyExtractionPass BuiltIn CRenderer CRepr Cst CstUtil
    Cli CliEngine CliParser CliUtil CodeGen CombiningPass Common Compiler
    DeclIdSet DesugarBorrows DesugarPaths DesugaringPass Entrypoint Env
    EnvExtras EnvTypes EnvUtils Error ErrorText Escape ExportInstantiation
    ExtractionPass HtmlError Id Identifier IdentifierMap IdentifierSet
    ImportResolution Imports LexEnv LiftControlPass LinearityCheck
    ModuleNameSet MonoType MonoTypeBindings Monomorphize MtastUtil
    Names ParserInterface Qualifier Region RegionMap Reporter ReturnCheck
    SourceContext Span Stages StringSet TailCallAnalysis TailCallUtil
    TastUtil Type TypeBindings TypeCheckExpr TypeClasses TypeErrors
    TypeMatch TypeParameter TypeParameters TypeParser TypeReplace
    TypeSignature TypeStripping TypeSystem TypeVarSet TypingPass Util Version
  ))

; OCaml library with C FFI for SafestOS
(library
  (name austral_caml)
  (public_name austral.austral_caml)
  (synopsis "OCaml compiler with C FFI for SafestOS")
  (libraries austral_core)
  (foreign_stubs
    (language c)
    (names CamlCompiler_stubs)
    (flags :standard -fPIC))
  (modules CamlCompiler))

; CPS IR Generator
(library
  (name austral_cps_gen)
  (libraries austral_core austral_caml)
  (modules CpsGen Compiler_cps))

; Rust Cranelift Bridge
(library
  (name austral_rust_bridge)
  (libraries austral_core austral_caml austral_cps_gen)
  (modules CamlCompiler_rust_bridge)
  (foreign_stubs
    (language c)
    (names rust_bridge)
    (flags :standard -fPIC -ldl -L../cranelift/target/release -laustral_cranelift_bridge)))

(documentation)
