(ocamllex Lexer)

(menhir
 (modules Parser))

; Core Austral compiler (includes CPS extensions)
(library
  (name austral_core)
  (public_name austral.austral_core)
  (synopsis "The bootstrapping compiler for Austral.")
  (libraries unix str sexplib zarith yojson)
  (preprocess (pps ppx_deriving.eq ppx_deriving.show ppx_sexp_conv))
  (flags
   ;menhir generates instances of the "unused rec flag"
   ; warning
   (:standard -w -39))
  (modules
    :standard \ CamlCompiler CamlCompiler_rust_bridge))

; OCaml library with C FFI for SafestOS
(library
  (name austral_caml)
  (public_name austral.austral_caml)
  (synopsis "OCaml compiler with C FFI for SafestOS")
  (libraries austral_core)
  (foreign_stubs
    (language c)
    (names CamlCompiler_stubs)
    (flags :standard -fPIC))
  (modules CamlCompiler))

; Rust Cranelift Bridge
(library
  (name austral_rust_bridge)
  (public_name austral.austral_rust_bridge)
  (synopsis "Rust Cranelift JIT bridge for SafestOS")
  (libraries austral_core austral_caml)
  (modules CamlCompiler_rust_bridge)
  (foreign_stubs
    (language c)
    (names rust_bridge)
    (flags :standard -fPIC -ldl -L../safestos/cranelift/target/release -laustral_cranelift_bridge)))

(documentation)
