(ocamllex Lexer)

(menhir
 (modules Parser))

; Core Austral compiler - EXPLICIT modules
(library
  (name austral_core)
  (public_name austral.austral_core)
  (synopsis "The bootstrapping compiler for Austral core.")
  (libraries unix str sexplib zarith yojson)
  (preprocess (pps ppx_deriving.eq ppx_deriving.show ppx_sexp_conv))
  (wrapped false)
  (flags :standard -w -39-50)
  (modules
    AbstractionPass BodyExtractionPass BuiltIn BuiltInModules CRenderer CRepr 
    CellAttribute Cst CstUtil CodeGen 
    CombiningPass Common DeclIdSet DesugarBorrows DesugarPaths 
    DesugaringPass Entrypoint Env EnvExtras EnvTypes EnvUtils Error 
    ErrorText Escape ExportInstantiation ExtractionPass HtmlError Id 
    Identifier IdentifierMap IdentifierSet ImportResolution Imports LexEnv 
    LiftControlPass LinearityCheck ModIdSet ModuleNameSet MonoType 
    MonoTypeBindings Monomorphize MtastUtil Names ParserInterface Qualifier 
    Region RegionMap Reporter ReturnCheck SourceContext Span Stages 
    StringSet TailCallAnalysis TailCallUtil TastUtil Type TypeBindings 
    TypeCheckExpr TypeClasses TypeErrors TypeMatch TypeParameter 
    TypeParameters TypeParser TypeReplace TypeSignature TypeStripping 
    TypeSystem TypeVarSet TypingPass Util Version Lexer Parser
  ))

; OCaml library with C FFI for SafestOS
(library
  (name austral_caml)
  (public_name austral.austral_caml)
  (libraries austral_core)
  (wrapped false)
  (foreign_stubs
    (language c)
    (names CamlCompiler_stubs)
    (flags :standard -fPIC))
  (modules CamlCompiler))

; CPS IR Generator - NEW
(library
  (name austral_cps_gen)
  (public_name austral.austral_cps_gen)
  (libraries austral_core austral_caml)
  (wrapped false)
  (modules CpsGen Compiler_cps))

; Rust Cranelift Bridge
(library
  (name austral_rust_bridge)
  (public_name austral.austral_rust_bridge)
  (libraries austral_core austral_caml austral_cps_gen)
  (wrapped false)
  (modules CamlCompiler_rust_bridge)
  (c_library_flags -L/media/leo/e7ed9d6f-5f0a-4e19-a74e-83424bc154ba/australVM/safestos/cranelift/target/release -laustral_cranelift_bridge)
  (foreign_stubs
    (language c)
    (names rust_bridge)
    (flags :standard -fPIC -ldl -L/media/leo/e7ed9d6f-5f0a-4e19-a74e-83424bc154ba/australVM/safestos/cranelift/target/release -laustral_cranelift_bridge)))

; Main Austral compiler entry points - DEPENDS ON JIT
(library
  (name austral_lib)
  (public_name austral.austral_lib)
  (libraries austral_core austral_rust_bridge)
  (wrapped false)
  (flags :standard -w -39-50)
  (modules Compiler Cli CliEngine CliParser CliUtil))

(documentation)
